--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -1,5 +1,13 @@
-ktor_version=1.5.1
-kotlin_version=1.4.10
-logback_version=1.2.3
 kotlin.code.style=official
-prometeus_version=1.6.3
+dokkaVersion=1.4.20
+jacocoVersion=0.8.6
+jUnitVersion=5.7.1
+koinVersion=2.2.2
+kotestVersion=4.4.1
+kotlinVersion=1.4.21
+kotlinResultVersion=1.1.10
+ktlintVersion=10.0.0
+ktorVersion=1.5.0
+logbackVersion=1.2.3
+prometheusVersion=1.6.3
+shadowVersion=6.1.0
