--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -27,6 +27,4 @@ jobs:
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
       - name: Build
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: build
+        run: ./gradlew build
