--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -5,10 +5,12 @@ on:
     branches: [master, develop, feature/*, renovate/*, release/*]
     paths:
       - "backend/**"
+      - ".github/workflows/backend_ci.yml"
   pull_request:
     branches: [master, develop, feature/*, renovate/*, release/*]
     paths:
       - "backend/**"
+      - ".github/workflows/backend_ci.yml"
 
 defaults:
   run:
