GitHub: Updated Backend CI workflow

--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -26,7 +26,22 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 15
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
+        with:
+          path: |
+            ./backend/.gradle/caches
+            ./backend/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
       - name: Build
         run: ./gradlew build
+      - name: Cleanup Gradle Cache
+        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
+        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
+        run: |
+          rm -f ./.gradle/caches/modules-2/modules-2.lock
+          rm -f ./.gradle/caches/modules-2/gc.properties
