--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -15,6 +15,9 @@ on:
 defaults:
   run:
     working-directory: frontend
+    
+env:
+  do_deploy: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
 
 jobs:
   build:
@@ -23,7 +26,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setyp Node
+      - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: '14'
@@ -48,3 +51,27 @@ jobs:
         run: |
           npx webdriver-manager update --versions.chrome=87.0.4280.88
           npm run e2e:ci
+      - name: Upload artifact
+        if: env.do_deploy == 'true'
+        uses: actions/upload-artifact@v2
+        with:
+          name: finwa-frontend-artifact
+          path: ./frontend/dist/finwa-frontend/
+          if-no-files-found: error
+  deploy:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    if: env.do_deploy == 'true'
+    steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: finwa-frontend-artifact
+    - name: Create 404 file
+      run: cp index.html 404.html
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@4.0.0
+      with:
+        branch: gh-pages
+        folder: .
+        clean: true
