--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -61,15 +61,18 @@ jobs:
     timeout-minutes: 5
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: finwa-frontend-artifact
-    - name: Create 404 file
-      run: cp index.html 404.html
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@4.0.0
-      with:
-        branch: gh-pages
-        folder: .
-        clean: true
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: finwa-frontend-artifact
+          path: ./frontend/dist
+      - name: Create 404 file
+        run: cp ./dist/index.html ./dist/404.html
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          branch: gh-pages
+          folder: ./frontend/dist
+          clean: true
