--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,11 @@
     "@angular/platform-browser": "11.2.2",
     "@angular/platform-browser-dynamic": "11.2.2",
     "@angular/router": "11.2.2",
+    "@ngrx/store": "^11.0.1",
+    "@ngx-translate/core": "^13.0.0",
+    "d3": "^6.5.0",
+    "ngrx-store-localstorage": "^11.0.0",
+    "ngx-logger": "^4.2.0",
     "rxjs": "6.6.3",
     "tslib": "2.1.0",
     "zone.js": "0.11.4"
@@ -48,6 +53,7 @@
     "@angular/cli": "11.2.1",
     "@angular/compiler-cli": "11.2.2",
     "@compodoc/compodoc": "1.1.11",
+    "@types/d3": "^6.3.0",
     "@types/jasmine": "3.6.4",
     "@types/node": "12.20.4",
     "@typescript-eslint/eslint-plugin": "4.15.2",
