Backend: Configured persistence and created architectural basis

--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -2,13 +2,17 @@ kotlin.code.style=official
 arkenvVersion=3.1.0
 dokkaVersion=1.4.20
 jacocoVersion=0.8.6
+jbcryptVersion=0.4
 jUnitVersion=5.7.1
+kmongoVersion=4.2.4
 koinVersion=2.2.2
 kotestVersion=4.4.1
 kotlinVersion=1.4.21
+kotlinLoggingVersion=2.0.4
 kotlinResultVersion=1.1.10
 ktlintVersion=10.0.0
 ktorVersion=1.5.0
 logbackVersion=1.2.3
+mongoGradlePluginVersion=1.0.7
 prometheusVersion=1.6.4
 shadowVersion=6.1.0
