--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -4,11 +4,13 @@ ktor {
     port = ${?PORT}
   }
   application {
-    modules = [eu.yeger.ApplicationKt.mainModule]
+    modules = [
+      eu.yeger.finwa.ApplicationKt.mainModule,
+      eu.yeger.finwa.auth.AuthModuleKt.authModule,
+      eu.yeger.finwa.koin.KoinModuleKt.koinModule,
+      eu.yeger.finwa.monitoring.MonitoringModuleKt.monitoringModule,
+      eu.yeger.finwa.routing.RoutingModuleKt.routingModule,
+      eu.yeger.finwa.InitializationModuleKt.initializationModule, // This must always be the last module
+    ]
   }
-}
-jwt {
-  domain = "https://jwt-provider-domain/"
-  audience = "jwt-audience"
-  realm = "ktor sample app"
 }
