Backend: Configured authentication

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -6,7 +6,7 @@ ktor {
   application {
     modules = [
       eu.yeger.finwa.ApplicationKt.mainModule,
-      eu.yeger.finwa.auth.AuthModuleKt.authModule,
+      eu.yeger.finwa.auth.AuthModuleKt.authModule, // Must be loaded before routingModule
       eu.yeger.finwa.koin.KoinModuleKt.koinModule,
       eu.yeger.finwa.monitoring.MonitoringModuleKt.monitoringModule,
       eu.yeger.finwa.routing.RoutingModuleKt.routingModule,
