--- a/.editorconfig
+++ b/.editorconfig
@@ -16,3 +16,6 @@ quote_type = single
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.{kt,kts}]
+disabled_rules=no-wildcard-imports
