--- a/.github/workflows/release_latest.yml
+++ b/.github/workflows/release_latest.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Merge develop into master
         uses: everlytic/branch-merge@1.1.0
         with:
-          github_token: ${{ github.token }}
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           source_ref: 'develop'
           target_branch: 'master'
           commit_message_template: '[Automated] Merged {source_ref} into target {target_branch}'
