--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v2
         with:
+          distribution: zulu
           java-version: 15
       - name: Cache Gradle packages
         uses: actions/cache@v2
